[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "libre-fastapi-jwt"
version = "0.22.8"
description = "Yet another fork of fast-jwt-auth"
authors = ["Libre NZ <github-support@libre.nz>"]
license = "MIT"
repository = "https://github.com/LibreNZ/libre-fastapi-jwt"
readme = "README.md"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
PyJWT = "^2.10.1"
fastapi = ">=0.115.8"
cryptography = ">=44.0.1"
httpx = ">=0.28.1"
pydantic-settings = "^2.7.1"
poetry-plugin-up = "^0.9.0"


[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
requests = ">=2.32.3"
pytest-cov = "^6.0.0"
uvicorn = ">=0.34.0"
[tool.poetry.group.dev.dependencies]
pytest-md-report = "^0.6.2"


[tool.pytest.ini_options]
log_format = "%(asctime)s loglevel=%(levelname)-6s logger=%(name)s %(funcName)s() L%(lineno)-4d %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
md_report = true
md_report_color = "auto"
