[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "libre-fastapi-jwt"
version = "0.23.1"
description = "Yet another fork of fast-jwt-auth"
authors = ["Libre NZ <github-support@libre.nz>"]
license = "MIT"
repository = "https://github.com/LibreNZ/libre-fastapi-jwt"
readme = "README.md"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.12.0,<4.0"
PyJWT = "^2.12.1"
fastapi = ">=0.135.3"
cryptography = ">=46.0.6"
httpx = ">=0.28.1"
pydantic-settings = "^2.13.1"


[tool.poetry.dev-dependencies]
poetry-plugin-up = ">=0.9.0"
pytest = ">=9.0.2"
requests = ">=2.33.1"
pytest-cov = ">=7.1.0"
uvicorn = ">=0.44.0"

[tool.pytest.ini_options]
log_format = "%(asctime)s loglevel=%(levelname)-6s logger=%(name)s %(funcName)s() L%(lineno)-4d %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
